# browseblind

./: .gitignore  CNAME  README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  index.html
backend/: README.md  pyproject.toml
backend/src/: main.py  main.spec  test.py  voice_model.py
backend/src/agents/: config.py  main.py
backend/src/agents/models/: browser.py
backend/src/agents/models/browser_agents/: close_tab.py  go_back.py  go_forward.py  print_page.py  reload_page.py  search_engine.py  url_engine.py
backend/src/agents/models/decision_agents/: browser_agent.py  inner_agent.py  onload_agent.py  processing_agent.py  question_agent.py  read_page_agent.py
backend/src/agents/models/inner_agents/click/: click_agent.py
backend/src/agents/models/inner_agents/input/: text_agent.py
backend/src/agents/schemas/: message.py
backend/src/llms/: deepgram.py  gemini.py  groq.py
backend/src/myenv/: pyvenv.cfg
backend/src/utils/: html_parser.py  llm_parsing.py
packaging/: README.md
